--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                   <h2>Contact Us</h2>
                     <div>
                     <ol style="text-align: left; font-size: 3.5vw;">
+                      <li>Institute Website: <a href="https://www.pim.ac.th"> www.pim.ac.th</a></li>
                       <li>Email: <a href="https://www.youtube.com/watch?v=g_93xQfRjEI&list=RDg_93xQfRjEI&start_radio=1", style="color: pink; text-decoration: underline;">6752300488@stu.pim.ac.th</a></li>
                       <li>Phone: <a href="tel:+1234567890" style="color: pink; text-decoration: underline;">+1 234 567 890</a></li>
                       <li>Address: 123 Main Street, Bangkok, Thailand</li>
