--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <!-- Contact -->
               <section id="contact1" class="real-section bg-light">
                 <div class="container text-center">
-                  <h2>Contact Us</h2>
+                  <h2>Contacts</h2>
                     <div>
                     <ol style="text-align: left; font-size: 2.75vw;">
                       <li>Institute Website: <a href="https://www.pim.ac.th"> www.pim.ac.th</a></li>
